# SERI-MATS-2023-Streamlit-pages

./: .gitignore  README.md  a_new_saved_direction.pt  genindex.html  index.html  modules.html  objects.inv  pyproject.toml  searchindex.js  setup.py  transformer_lens.html
assets/: learned_bias.pt  learned_scale.pt
explore_prompts/: Home.py  copy_suppression_classification.py  explore_prompts.ipynb  explore_prompts_utils.py  generate_html.py  ipython_cell_input.py  model_results.py  model_results_1.py  model_results_2.py  model_results_3.py  requirements.txt  streamlit_styling.py
explore_prompts/media/anti_induction/: scores_dict.pkl
explore_prompts/pages/: 01_Browse_Examples.py  01_OV_and_QK_circuits.py  02_Browse_Examples.py  02_Test_Your_Own_Examples.py  03_Test_Your_Own_Examples.py  04_Copy_Suppression_Classification.py  05_Anti_Induction_vs_Copy_Suppression.py
tests/unit/: test_hooks.py
transformer_lens/: FactoredMatrix.py  HookedEncoder.py  HookedTransformer.py  HookedTransformerConfig.py  components.py
transformer_lens/cautils/: ioi_dataset.py  notebook.py  plotly_utils.py  utils.py
transformer_lens/hackathon/: arthur_experiment.py
transformer_lens/rs/arthur/: owt_and_hardcoded_qk_sem.py
transformer_lens/rs/arthurs_notebooks/: arthur_dla.py  arthur_signal_owt.py  arthur_utils.py  arthurs_utils.py  attention_score_contribution_across_datasets.py  better_prediction_attention.py  can_we_find_advex.py  cody_contradiction.py  cody_just_backup.py  cody_remake_plot.py  cspa_failures.py  cspa_with_projection.py  direct_effect_survey.py  dumb_annoying_bug_i_cannot_find.ipynb  dumb_annoying_bug_i_cannot_find.py  ee.py  effective_key_embeddings.py  explore_prompts.py  first_cody_plot.py  key_and_query_projection.py  key_loss_recovered.py  log_attention.py  max_activating_examples.py  mistral-arc.txt  my_tokens.pt  my_tokens_tl.pt  optimizing_a_direction_in_query_space.py  out2.txt  ov_per_position.py  owt_and_hardcoded_qk_sem.py  path_patching.py  proper_noun_advex.py  py_quad_plot.py  review_rebuttal_big_model.py  rhys_xl.py  runner.py  score_subtract_embeddings.py  script.py  scripter.py  setup_cspa_sweep.py  (+8 more)
transformer_lens/rs/callum/: arthur_dump_of_9_9_unembeddings.py  calibration.ipynb  entropy.ipynb  generate_bag_of_words_quad_plot.py  keys_fixed.py  max_activating_exploration.ipynb  max_activating_exploration.py  orthogonal_query_investigation.ipynb  orthogonal_query_investigation.py  ov_circuit.ipynb  project_onto_unembed.ipynb
transformer_lens/rs/callum2/: README.md  keys_fixed.py  requirements.txt  utils.py
(+319 files in other folders)
