[tool.poetry]
name = "transformer-lens"
version = "0.0.0" # This is automatically set by the CD pipeline on release
description = "An implementation of transformers tailored for mechanistic interpretability. Maybe we can add pip install git+https://github.com/vacancy/einshape@6842ff1971b5b48b5b1928b5f756265b6d8f97c9 to this pyproject file?"
authors = ["Neel Nanda <77788841+neelnanda-io@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "transformer_lens"}]

[tool.poetry.dependencies]
python = ">=3.9,<4.0,!=3.9.7"
einops = ">=0.6.0"
numpy = [{ version = ">=1.21", python = "<3.10" },
         { version = ">=1.23", python = ">=3.10" }]
torch = ">=1.10,<2.0"
datasets = ">=2.7.1"
transformers = ">=4.25.1"
tqdm = ">=4.64.1"
pandas = ">=1.1.5"
wandb = ">=0.13.5"
fancy-einsum = ">=0.0.3"
rich = ">=12.6.0"
jaxtyping = ">=0.2.11"
sphinx = {version = "5.2.3", optional = true, python = ">=3.8,<3.10"}
sphinxcontrib-napoleon = {version = ">=0.7", optional = true, python = ">=3.8,<3.10"}
sphinx-autobuild = {version = ">=2021.3.14", optional = true, python = ">=3.8,<3.10"}
furo = {version = ">=2022.12.7", optional = true, python = ">=3.8,<3.10"}
myst-parser = {version = ">=0.18.1", optional = true, python = ">=3.8,<3.10"}
tabulate= {version = ">=0.9.0", optional = true, python = ">=3.8,<3.10"}
typeguard = "^3.0.2"
ipython = "^8.14.0"
plotly = "^5.15.0"
circuitsvis = "^1.40.1"
streamlit = "^1.25.0"
nltk = "^3.8.1"
pattern = {git = "https://github.com/uob-vil/pattern.git", rev = "3b77852c51d1e80b17d9abba0be5efad6a2fd7a5"}

[tool.poetry.group.dev.dependencies]
pytest = ">=7.2.0"
pytest-cov = ">=4.0.0"
mypy = ">=0.991"
jupyter = ">=1.0.0"
circuitsvis = ">=1.38.1"
plotly = ">=5.12.0"
isort = "5.8.0"
black = "^23.3.0"
pycln = "^2.1.3"

[tool.poetry.group.jupyter.dependencies]
jupyterlab = ">=3.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.extras]
docs = ["Sphinx", "sphinx-autobuild", "sphinxcontrib-napoleon", "furo", "myst_parser","tabulate"]

[tool.pytest.ini_options]
filterwarnings = [
    "ignore:pkg_resources is deprecated as an API:DeprecationWarning",
    # Ignore numpy.distutils deprecation warning caused by pandas
    # More info: https://numpy.org/doc/stable/reference/distutils.html#module-numpy.distutils
    "ignore:distutils Version classes are deprecated:DeprecationWarning"
]

[tool.isort]
profile = "black"
extend_skip = ["__init__.py"]
